Fix: add uniform Back to Top button across all pages

--- a/frontend/pages/Contribute.html
+++ b/frontend/pages/Contribute.html
@@ -308,5 +308,10 @@ git push origin feature/add-new-feature
       <a href="https://github.com/sayeeg-11/opensource-compass">GitHub</a>
     </p>
   </footer>
+  <script src="../js/main.js"></script>
+
+  <button id="scrollTopBtn" title="Back to Top">
+   <i class="fas fa-chevron-up"></i>
+  </button>
 </body>
 </html>
