--- a/frontend/pages/sitemap.html
+++ b/frontend/pages/sitemap.html
@@ -111,11 +111,12 @@
   © 2026 OpenSource Compass • Built for the Open Source Community
 </footer>
 
-<!-- SCROLL TOP -->
-<button id="scrollTopBtn">
-  <i class="fas fa-chevron-up"></i>
-</button>
 
 <script src="../js/sitemap.js"></script>
+<script src="../js/main.js"></script>
+
+  <button id="scrollTopBtn" title="Back to Top">
+   <i class="fas fa-chevron-up"></i>
+  </button>
 </body>
 </html>
