--- a/frontend/pages/faq.html
+++ b/frontend/pages/faq.html
@@ -93,5 +93,10 @@
   <script src="../js/theme.js"></script>
   
   <script src="../js/chatbot.js"></script>
+  <script src="../js/main.js"></script>
+
+  <button id="scrollTopBtn" title="Back to Top">
+   <i class="fas fa-chevron-up"></i>
+  </button>
 </body>
 </html>
