--- a/frontend/pages/glossary.html
+++ b/frontend/pages/glossary.html
@@ -227,5 +227,10 @@
         // Initial render
         renderCards();
     </script>
+    <script src="../js/main.js"></script>
+
+  <button id="scrollTopBtn" title="Back to Top">
+   <i class="fas fa-chevron-up"></i>
+  </button>
 </body>
 </html>
