--- a/frontend/pages/guides.html
+++ b/frontend/pages/guides.html
@@ -200,6 +200,11 @@
 
 
 <script src="../js/chatbot.js"></script>
+<script src="../js/main.js"></script>
+
+  <button id="scrollTopBtn" title="Back to Top">
+   <i class="fas fa-chevron-up"></i>
+  </button>
 </body>
 
 </html>
