Dark mode issue I solved

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <h3>Legendary Open Source Programs</h3>
         <p>Curated programs with historical success rates and maintainer insights.</p>
 
-        <div class="card-grid">
+        <div class="card-grid" class="program-card">
           <div class="card fade-in">
             <h4><i class="fas fa-snowflake"></i> Social Winter of Code</h4>
             <p>India's premier winter program with strong mentorship culture.</p>
